# icu_segmenter_capi

./: Cargo.toml  README.md
c/include/: ICU4XDataProvider.h  ICU4XError.h  ICU4XGraphemeClusterBreakSegmenter.h  ICU4XLocale.h
src/: errors.rs  lib.rs  locale.rs  provider.rs  segmenter_grapheme.rs
